# Kaggle-Quora-Insincere-Questions-Classification

./: .env  .gitignore  README.md  data_pytorch.pkl  features.npy  git_push.sh  main.py  requirements.txt  run_submission.sh  test.sh  test_df_for_debug.pkl  test_features.npy  train_df_for_debug.pkl  word_index.npy  x_test.npy  x_train.npy  y_train.npy
base/: 0_all_common.py  1_embedding_io.py  2_embeddings.py  3_layer_embeddings.py  4_bilstm_attention.py  5_pytorch_modeling.py  bilstm_attention.py  common.py  final_bla_bla.py  mercari_mlp_without_embeddings.py  pytorch_modeling.py  tfidf.py
for_submit/: advocate1.py  advocate2.py
local0_708/: stacking.py  tfidf.py
local0_708_split0/: stacking.py  tfidf.py
local0_708_split1/: stacking.py  tfidf.py
local0_708_split10/: stacking.py  tfidf.py
local0_708_split11/: stacking.py  tfidf.py
local0_708_split12/: bilstm_attention.py  stacking.py  tfidf.py
local0_708_split13/: stacking.py  tfidf.py
local0_708_split14/: stacking.py  tfidf.py
local0_708_split15/: stacking.py  tfidf.py
local0_708_split16/: stacking.py  tfidf.py
local0_708_split17/: stacking.py  tfidf.py
local0_708_split18/: stacking.py  tfidf.py
local0_708_split19/: stacking.py  tfidf.py
local0_708_split2/: stacking.py  tfidf.py
local0_708_split3/: stacking.py  tfidf.py
local0_708_split4/: stacking.py  tfidf.py
local0_708_split5/: mercari_mlp_without_embeddings.py  merge.py  merge_test.py  merge_test2.py  stacking.py  (+3 more)
project_name/: README.md  main.py  setup.cfg
project_name/docker/: Dockerfile
project_name/docs/source/: conf.py
(+87 files in other folders)
