[metadata]
name = kaggle-quora
version = attr: kaggle-quora.__version__
;url =
author = maida228
author_email = midyshr228@gmail.com
;license =
description = kaggle-quora
long_description = file: README.md

[options]
packages = find:

[tool:pytest]
testpaths=tests
addopts = --pdbcls=IPython.terminal.debugger:Pdb
ignore=tests